Update node module dependencies

--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -1120,7 +1120,7 @@
     status: won
     website: "https://nagemon.com"
     description: "Nagemon is an NFT marketplace that built on the Ethereum Blockchain with advanced security measures. This unique marketplace supports users to trade NFT Assets (ERC-721 Tokens) which are identified as ‘BUY MON’ and ‘SELL MON’. Users can always check their balance in ‘MY MON’, or join ‘Gacha’ games as much as they want, or check high value assets in ‘VALUED MON’. Welcome to the next level of trading in Dapps Games!"
-    twitter: "https://twitter.com/Nagemon_Dapps"
+    twitter2: "https://twitter.com/Nagemon_Dapps"
     twitter: "https://twitter.com/NagemonJP_Dapps"
     logo: nagemon.png
 
