--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -1124,4 +1124,15 @@
     twitter: "https://twitter.com/NagemonJP_Dapps"
     logo: nagemon.png
 
-
+-   name: "Crown Platform"
+    status: won
+    website: "https://crown.tech"
+    description: "The Crown Platform hosts a thriving community of developers, merchants and enterprising individuals. Together, we are creating an open-access, decentralized economy that uses blockchain technology to support new applications. NFTs represent the newest functionality added to the platform and we invite everyone to come and build their applications on our industry-leading MN-PoS consensus based blockchain. NFT framework is currently in testnet only and mainnet release is expected around the end of October or early November."
+    discord: "https://discordapp.com/invite/uFhNZNW"
+    telegram: "https://t.me/crownplatform"
+    github: "https://gitlab.crown.tech/crown/crown-core"
+    twitter: "https://twitter.com/crownplatform"
+    facebook: "https://www.facebook.com/crownplatform"
+    youtube: "https://www.youtube.com/channel/UCCKAgkSSOI-fIqcAEHR1rXw"
+    linkedin: "https://www.linkedin.com/company/crown-platform"
+    logo: crown.png
