--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -1136,3 +1136,11 @@
     youtube: "https://www.youtube.com/channel/UCCKAgkSSOI-fIqcAEHR1rXw"
     linkedin: "https://www.linkedin.com/company/crown-platform"
     logo: crown.png
+
+-   name: "Connie Digital"
+    status: won
+    website: "http://danky.art"
+    description: "Blockchain-based digital artist, collector and early figure in the tokenized art movement known as Crypto Art."
+    twitter: "https://twitter.com/conniedigital"
+    logo: Connie.png
+    
