--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "nf-alliance-www",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "The official nf-alliance public website.",
   "author": "David Ličen <david.licen@0xcert.org>, Kristijan Sedlak <kristijan@0xcert.org>",
-  "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
@@ -13,30 +12,30 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/google-tag-manager": "^2.3.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "nuxt": "^2.10.2",
-    "vue-cookie-law": "^1.10.0",
-    "vue-social-sharing": "^2.4.6"
+    "@nuxtjs/google-tag-manager": "^2.3.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "nuxt": "^2.11.0",
+    "vue-cookie-law": "^1.11.0",
+    "vue-social-sharing": "^2.4.7"
   },
   "devDependencies": {
-    "@nuxtjs/axios": "^5.7.0",
+    "@nuxtjs/axios": "^5.9.3",
     "@nuxtjs/feed": "^1.1.0",
     "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/workbox": "^2.6.0",
     "babel-eslint": "^10.0.3",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.4.0",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^3.0.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "foundation-sites": "^6.5.3",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-vue": "^6.1.2",
+    "foundation-sites": "^6.6.1",
     "js-yaml-loader": "^1.2.2",
-    "node-sass": "^4.12.0",
-    "nuxt-mq": "^2.0.0",
-    "sass-loader": "^8.0.0",
+    "node-sass": "^4.13.1",
+    "nuxt-mq": "^2.0.1",
+    "sass-loader": "^8.0.2",
     "v-lazy-image": "^1.3.2",
-    "vee-validate": "^2.2.13",
+    "vee-validate": "2.2.13",
     "vue-scrollto": "^2.17.1"
   }
 }
