--- a/static/data/resources.yml
+++ b/static/data/resources.yml
@@ -613,6 +613,11 @@
   tag:
   - scaling solution
 
+- link: https://twitter.com/i/lists/1356905489318182914
+  description: J.P. Aulet NFT Twitter list
+  tag:
+  - twitter
+
 - link: https://twitter.com/GianniDalerta/lists/nft
   description: Gianni Dalerta NFT Twitter list
   tag:
